--- a/resources/css/chambres.css
+++ b/resources/css/chambres.css
@@ -273,3 +273,72 @@ margin-top:-30px;
   
   
 }
+.detais{
+  display:flex;
+  flex-wrap:wrap;
+  gap: 100px;
+  height:100px;
+  width:100%;
+  justify-content:center;
+  background-color:#5F9EA0;
+  padding:20px;
+  padding-top:50px;
+}
+.detais p{
+  font-size:18px;
+  color:white;
+}
+.detais a{
+  font-size:18px;
+  color:white;
+  margin-top:10px;
+}
+.chambre {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  margin-top:100px;
+  margin-bottom:-120px;
+}
+
+.owl-carousel {
+  width: 100%;
+  position: relative;
+}
+
+.owl-carousel .item {
+  text-align: center;
+}
+
+.owl-carousel img {
+  max-width: 100%;
+  height: 550px;
+  margin: 0 auto;
+  display: block;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.owl-prev,
+.owl-next {
+  height: 50px;
+  position: absolute;
+  width: 50px;
+  cursor: pointer;
+  top: 35%;
+  background: gray !important;
+  transition: 0.5s;
+}
+
+
+.owl-prev {
+  left: 20px;
+}
+
+.owl-next {
+  right: 20px;
+}
+
+.chambre p {
+  margin: 10px 0;
+}
