--- a/resources/css/contact.css
+++ b/resources/css/contact.css
@@ -1,8 +1,9 @@
-*{
-  margin: 0;
-}
+
 .footer{
-  margin-top: 50px;
+    margin-left: -8px;
+    margin-right: -8px;
+    margin-bottom: -6px;
+    margin-top: 50px;
     background: url(../views/footer/footer-bg.jpg) no-repeat;
     background-size: cover;
     background-position: center;
@@ -204,6 +205,14 @@
     align-items: center;
   }
   
+  .para p {
+    font-size: 0.8em;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: -60px;
+    
+  }
   .linkbox {
     background-color: white;
     color: black;
