en for comments

--- a/resources/css/services.css
+++ b/resources/css/services.css
@@ -83,6 +83,7 @@
     text-align: center;
     color: white;
     font-size:3.4rem;
+    margin-bottom: 34px;
   }
   .bar {
     position: absolute;
