--- a/resources/css/reservation.css
+++ b/resources/css/reservation.css
@@ -202,6 +202,9 @@ form{
   input[type="date"],
   input[type="number"],
   input[type="email"],
+  input[type="text"],
+  input[type="password"],
+  input[type="tel"],
   #card-element {
     width: 100%;
     padding: 10px;
@@ -209,7 +212,8 @@ form{
     border-radius: 4px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   }
-  
+ 
+
   select {
     appearance: none;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3E%3Cpath fill='%23343a40' d='M3.9 6.9l1.1-1.1 1.1 1.1c.2.2.5.2.7 0s.2-.5 0-.7L5.7 5.2v-4c0-.3-.2-.5-.5-.5s-.5.2-.5.5v4L3.2 5.9c-.2-.2-.2-.5 0-.7.2-.2.5-.2.7 0z'/%3E%3C/svg%3E");
